[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hm_pyhelper"
version = "0.14.11"
description = "Helium Python Helper"
authors = ["Nebra Ltd <support@nebra.com>"]
readme = "README.md"
packages = [
    { include = "hm_pyhelper" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "~2.28.1"
retry = "~0.9.2"
base58 = "~2.1.1"
protobuf = "~4.21.12"
grpcio = "^1.50.1"
packaging = "~23"

[tool.poetry.group.dev.dependencies]
bandit = { version = "~1.7.4", extras = ["toml"] }
mock = "^5.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ruff = "~0.0.265"
responses = "^0.22.0"

[tool.ruff]
line-length = 120
exclude = ["protos"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = ["hm_pyhelper/tests"]
