[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hm_pyhelper"
version = "0.14.33"
description = "Helium Python Helper"
authors = ["Nebra Ltd <support@nebra.com>"]
readme = "README.md"
packages = [
    { include = "hm_pyhelper" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.28.1,<2.32.0"
retry = "~0.9.2"
base58 = "~2.1.1"
protobuf = "~4.23.4"
grpcio = "^1.50.1"
packaging = "~23.1"

[tool.poetry.group.dev.dependencies]
bandit = { version = "~1.7.5", extras = ["toml"] }
mock = "^5.0.2"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "~0.0.277"
responses = "^0.23.1"

[tool.ruff]
line-length = 120
exclude = ["protos"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = ["hm_pyhelper/tests"]
